Добавление иконок(не полностью)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,6 +71,10 @@ body {
   margin-right: auto;
 }
 
+.navigation-icon {
+  margin-right: 12px;
+}
+
 .logo-link {
   width: 145px;
   height: 36px;
@@ -482,10 +486,15 @@ body {
   font-size: 18px;
   line-height: 30px;
   display: block;
-  margin-left: auto;
   color: #444444;
 }
 
+.distribution-icon {
+  margin-left: auto;
+  margin-right: 16px;
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
 /* catalog.html */
 /* Хлебные крошки*/
 
