--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,11 @@ body {
   color: #000000;
 }
 
+/*Кнопки на главной странице */
+.button-main {
+  position: relative;
+}
+
 .navigation-form {
   width: 50%;
 }
@@ -116,6 +121,7 @@ body {
 }
 
 .navigation-services {
+  position: relative;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -124,6 +130,18 @@ body {
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.navigation-icon-catalog {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  padding: 17px 17px;
+  margin-top:-16px;
+  margin-left: 7px;
+  border-radius: 50%;
+  background-color: #D9D9D9;
+  opacity: .3;
 }
 
 .navigation-services-margin {
@@ -177,6 +195,9 @@ body {
   margin-bottom: 50px;
   color: #444444;
 }
+.slider-block {
+  position: relative;
+}
 
 .slider-link {
   display: block;
@@ -186,9 +207,20 @@ body {
   font-size: 18px;
   line-height: 21px;
   margin-bottom: 50px;
+  width: 220px;
+  height: 40px;
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.slider-link::before {
+  position:absolute;
+  background-color: #FFE17F;
+  margin: 6px 5px 6px 5px;
+  width: 220px;
+  height: 8px;
+  content: "";
 }
 
 .slider-specifications {
@@ -321,11 +353,24 @@ body {
   margin-bottom: 70px;
 }
 
+.delivery-images {
+  background-color:#FFE17F;
+}
+
 .delivery-link {
   display: flex;
+  position: relative;
   text-decoration: none;
   text-transform: uppercase;
   color: #000000;
+}
+
+.delivery-icon {
+  position: absolute;
+  width: 125px;
+  height: 100px;
+  padding: 35px 39px;
+  background-color: #FFE17F;
 }
 
 .delivery-text {
@@ -783,7 +828,40 @@ body {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  justify-content: space-between;
+}
+
+.footer-social-network-links {
+  position: relative;
+}
+
+.footer-social-network-telegram {
+  position:absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding-left: 13px;
+  padding-top: 12px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.footer-social-network-youtube {
+  position:absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding-left: 12px;
+  padding-top: 15px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.footer-social-network-twitter {
+  position:absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding-left: 13px;
+  padding-top: 13px;
+  background: rgba(255, 255, 255, 0.3);
 }
 
 .footer-services-links {
