--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -256,7 +256,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 800;
-  font-size: 18px;
+  font-size: 17px;
   line-height: 24px;
   margin: 0;
   margin-bottom: 70px;
@@ -274,9 +274,23 @@ body {
   margin-right: 40px;
 }
 
+.catalog-name {
+  width: 160px;
+  height: 60px;
+}
+
 .catalog-item-link {
+  position: relative;
   color: #000000;
   text-decoration: none;
+  width: 160px;
+  height: 160px;
+}
+
+.catalog-item-icon {
+  width: 160px;
+  height: 160px;
+  background: #FFE17F;
 }
 
 /* Услуги */
@@ -593,6 +607,22 @@ body {
   background-color:#F0F0F0;
 }
 
+.button-updown {
+  display: flex;
+  padding: 0;
+  margin: 20px 40px 20px 0;
+  list-style-type: none;
+}
+
+.updown-item {
+  width: 30px;
+  height: 30px;
+}
+
+.sorting-button-updown {
+  padding: 9.5px 10px;
+}
+
 .catalog-products {
   background-color: #F0F0F0;
 }
@@ -678,12 +708,6 @@ body {
   color: #000000;
 }
 
-.button-updown {
-  padding: 0;
-  margin: 20px 40px 20px 0;
-  list-style-type: none;
-}
-
 .product-list {
   margin: 0;
   padding-top: 70px;
@@ -760,6 +784,7 @@ body {
   margin: 0;
   margin-left: 20px;
   margin-bottom: 44px;
+  border: 3px solid #E5E5E5;
   color: #000000;
   background-color: #FFFFFF;
 }
@@ -825,6 +850,7 @@ body {
 
 .footer-social-network-list {
   display: flex;
+  justify-content: center;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -832,36 +858,33 @@ body {
 
 .footer-social-network-links {
   position: relative;
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
 }
 
 .footer-social-network-telegram {
   position:absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  padding-left: 13px;
-  padding-top: 12px;
-  background: rgba(255, 255, 255, 0.3);
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .footer-social-network-youtube {
   position:absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  padding-left: 12px;
-  padding-top: 15px;
-  background: rgba(255, 255, 255, 0.3);
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .footer-social-network-twitter {
   position:absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  padding-left: 13px;
-  padding-top: 13px;
-  background: rgba(255, 255, 255, 0.3);
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .footer-services-links {
