--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,7 @@ body {
 /* Стили шапки */
 
 .main-header {
+  margin-top: 40px;
   color: #000000;
 }
 
@@ -81,8 +82,14 @@ body {
 }
 
 .logo-link {
+  position: relative;
   width: 145px;
   height: 36px;
+  top: -20px;
+}
+
+.navigation-main{
+  padding-bottom: 134px;
 }
 
 .navigation{
@@ -100,6 +107,10 @@ body {
   margin-top: 30px;
   padding: 0;
   list-style-type: none;
+}
+
+.navigation-list:first-of-type{
+  margin-top: 10px;
 }
 
 .button-search {
@@ -195,11 +206,9 @@ body {
   margin-bottom: 50px;
   color: #444444;
 }
-.slider-block {
-  position: relative;
-}
 
-.slider-link {
+.button {
+  position: relative;
   display: block;
   font-family: 'Raleway', sans-serif;
   font-style: normal;
@@ -208,19 +217,26 @@ body {
   line-height: 21px;
   margin-bottom: 50px;
   width: 220px;
-  height: 40px;
+  letter-spacing: 0.2em;
+  text-align: center;
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
+  background-color:transparent;
+  border:none;
+  z-index: 0;
 }
 
-.slider-link::before {
+.button::before {
   position:absolute;
   background-color: #FFE17F;
-  margin: 6px 5px 6px 5px;
-  width: 220px;
+  width: 100%;
   height: 8px;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
   content: "";
+  z-index: -1;
 }
 
 .slider-specifications {
@@ -288,6 +304,9 @@ body {
 }
 
 .catalog-item-icon {
+  justify-content: center;
+  align-items: center;
+  display: flex;
   width: 160px;
   height: 160px;
   background: #FFE17F;
@@ -305,6 +324,10 @@ body {
   display: flex;
   margin-bottom: 70px;
   background-color: #F0F0F0;
+}
+
+.services .button {
+  width: 160px;
 }
 
 .services-list {
@@ -842,6 +865,7 @@ body {
 .footer-services-list {
   display: flex;
   margin: 0;
+  padding: 0;
   margin-bottom: 62px;
   padding-top: 137px;
   list-style-type: none;
@@ -856,12 +880,15 @@ body {
   list-style-type: none;
 }
 
+.footer-social-network-list-item:not(:last-child){
+  margin-right: 15px;
+}
+
 .footer-social-network-links {
   position: relative;
   display: block;
   width: 40px;
   height: 40px;
-  margin-right: 15px;
   background: rgba(255, 255, 255, 0.3);
   border-radius: 50%;
 }
