--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,12 +147,12 @@ body {
   position: absolute;
   width: 50px;
   height: 50px;
-  padding: 17px 17px;
+  padding: 15px 15px;
   margin-top:-16px;
   margin-left: 7px;
   border-radius: 50%;
-  background-color: #D9D9D9;
-  opacity: .3;
+  border: 2px solid #000000;
+  opacity: 0.3;
 }
 
 .navigation-services-margin {
@@ -315,8 +315,10 @@ body {
 /* Услуги */
 
 .page-container-services {
+  position: relative;
   display: flex;
   width: 1160px;
+  height: 319px;
   margin: 0 auto;
 }
 
@@ -336,9 +338,28 @@ body {
   list-style-type: none;
 }
 
+.services-list-item {
+  display: flex;
+}
+
+.services-images {
+  margin-left: 106px;
+}
 .services-list-button {
   margin: 65px 243px 65px 0;
+  padding:0;
   list-style-type: none;
+}
+
+.page-container-services::before {
+  position:absolute;
+  background-color: #000000;
+  width: 7px;
+  height: 319px;
+  left: 280px;
+  top: 0;
+  content: "";
+  z-index: 0;
 }
 
 .list-button-item {
@@ -436,8 +457,22 @@ body {
 }
 
 .contact-information-block {
+  position: relative;
   width: 540px;
   margin-right: auto;
+}
+
+.contact-information-block::before {
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+  width: 84px;
+  height: 7px;
+  background: #000000;
+  content: "";
+  z-index: 0;
 }
 
 .contact-heading {
@@ -447,6 +482,7 @@ body {
   font-size: 50px;
   line-height: 50px;
   margin: 0;
+  margin-top: 40px;
   margin-bottom: 48px;
   color: #000000;
 }
@@ -606,7 +642,13 @@ body {
 }
 
 .breadcrumbs-item {
+  position: relative;
   margin-right: 36px;
+}
+
+.breadcrumbs-item:not(:last-child){
+  background-image: url("../images/arrow-right.svg");
+  background-size: 16px 16px;
 }
 
 .breadcrumbs-link {
@@ -773,7 +815,7 @@ body {
 }
 
 .pagination {
-  display: flex;
+  display:flex;
   width: 760px;
   height: 71px;
   padding: 0;
@@ -784,6 +826,7 @@ body {
   list-style-type: none;
   justify-content: center;
   background-color: #FFFFFF;
+  background: #EBEBEB;
 }
 
 .pagination-forward {
@@ -810,6 +853,8 @@ body {
   border: 3px solid #E5E5E5;
   color: #000000;
   background-color: #FFFFFF;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
 }
 
 .pagination-link-number {
@@ -825,6 +870,29 @@ body {
   text-transform: uppercase;
 }
 
+.pagination-link {
+  text-decoration: none;
+}
+
+.pagination-backforward {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #000000;;
+}
+
+.pagination-backforward:last-child {
+  margin-right: 146px;
+}
+
+.pagination-backforward:first-of-type {
+  margin-left: 146px;
+}
+
 /* Футер страницы */
 
 .page-footer-container {
@@ -838,7 +906,22 @@ body {
 }
 
 .footer-contacts {
+  position: relative;
   width: 250px;
+}
+
+.footer-contacts:first-of-type::before {
+  position:absolute;
+  background-color: #FFC700;
+  width: 80px;
+  height: 7px;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+  margin-top: 237px;
+  content: "";
+  z-index: 0;
 }
 
 .logo-footer-link {
@@ -876,6 +959,7 @@ body {
   display: flex;
   justify-content: center;
   margin: 0;
+  margin-bottom: 61px;
   padding: 0;
   list-style-type: none;
 }
