Доработка декоративных элементов

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,15 +77,24 @@ body {
   margin-right: auto;
 }
 
-.navigation-icon {
-  margin-right: 12px;
-}
-
 .logo-link {
   position: relative;
   width: 145px;
   height: 36px;
   top: -20px;
+}
+
+.logo-link:hover {
+  opacity: 0.6;
+}
+
+.logo-link:active {
+  opacity: 0.3;
+}
+
+.logo-link:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
 }
 
 .navigation-main{
@@ -113,6 +122,38 @@ body {
   margin-top: 10px;
 }
 
+.search-form {
+  display: flex;
+  position: relative;
+}
+
+.icon-search {
+  position: absolute;
+  margin: 12px 12px 12px 16px;
+}
+
+.input-search {
+  width: 359px;
+  height: 40px;
+  border-width: 2px 0 2px 2px;
+  border-style: solid;
+  border-color: #000000;
+  border-radius: 50px 0 0 50px;
+  padding: 0 0 0 48px;
+  align-items: center;
+  background-color:transparent;
+}
+
+.input-search::placeholder {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  opacity: 0.3;
+}
+
 .button-search {
   font-family: "Rubik", sans-serif;
   font-weight: 400;
@@ -120,27 +161,50 @@ body {
   line-height: 20px;
   text-align: center;
   color: #000000;
+  width: 160px;
+  padding: 0;
+  height: 40px;
+  border: 2px solid #000000;
+  border-radius: 0 50px 50px 0;
+  background-color:transparent;
+}
+
+.button-search:hover,
+.navigation-link:hover,
+.navigation-services:hover {
+  opacity: 0.6;
+}
+.navigation-link:active,
+.navigation-services:active  {
+  opacity: 0.3;
+}
+.navigation-link:focus,
+.navigation-services:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
 }
 
 .navigation-link {
   font-weight: 400;
   font-size: 18px;
   line-height: 30px;
-  text-align: center;
   color: #000000;
   text-decoration: none;
 }
 
 .navigation-services {
   position: relative;
+  display: block;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
+  height: 50px;
   line-height: 21px;
-  text-align: center;
+  padding-top: 15px;
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
+  letter-spacing: 0.2em;
 }
 
 .navigation-icon-catalog {
@@ -160,9 +224,12 @@ body {
 }
 
 .navigation-catalog {
+  width: 293px;
+  height: 50px;
   margin-right: auto;
   margin-left: 0;
 }
+
 /* index.html */
 /* Стили слайдера */
 
@@ -175,6 +242,41 @@ body {
   flex-wrap: wrap;
   width: 1160px;
   margin: 0 auto;
+}
+
+.button {
+  position: relative;
+  display: block;
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 50px;
+  padding-top: 10px;
+  width: 220px;
+  height: 40px;
+  letter-spacing: 0.2em;
+  text-align: center;
+  color: #000000;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color:transparent;
+  border:none;
+  z-index: 1;
+
+}
+
+.button::before {
+  position:absolute;
+  background-color: #FFE17F;
+  width: 100%;
+  height: 8px;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  content: "";
+  z-index: -1;
 }
 
 .slider {
@@ -207,38 +309,6 @@ body {
   color: #444444;
 }
 
-.button {
-  position: relative;
-  display: block;
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 21px;
-  margin-bottom: 50px;
-  width: 220px;
-  letter-spacing: 0.2em;
-  text-align: center;
-  color: #000000;
-  text-decoration: none;
-  text-transform: uppercase;
-  background-color:transparent;
-  border:none;
-  z-index: 0;
-}
-
-.button::before {
-  position:absolute;
-  background-color: #FFE17F;
-  width: 100%;
-  height: 8px;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  content: "";
-  z-index: -1;
-}
-
 .slider-specifications {
   font-style: normal;
   font-weight: 400;
@@ -265,6 +335,23 @@ body {
 
 .slider-pagination-item {
   display: flex;
+}
+
+.button-slider:hover {
+  background: #FFE17F;
+}
+
+.button-slider:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
+}
+
+.button-slider:active {
+  background: #FFCC33;
+}
+
+.button-slider:disabled {
+  opacity: 0.3;
 }
 /* Список категорий каталога */
 
@@ -296,11 +383,22 @@ body {
 }
 
 .catalog-item-link {
-  position: relative;
+  display: block;
   color: #000000;
   text-decoration: none;
   width: 160px;
-  height: 160px;
+  height: 253px;
+}
+
+.catalog-item-link:hover .catalog-item-icon {
+  background: #FFC700;
+}
+.catalog-item-link:active{
+  opacity: 0.3;
+}
+.catalog-item-link:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
 }
 
 .catalog-item-icon {
@@ -309,6 +407,7 @@ body {
   display: flex;
   width: 160px;
   height: 160px;
+  margin-bottom: 32px;
   background: #FFE17F;
 }
 
@@ -329,7 +428,15 @@ body {
 }
 
 .services .button {
+  padding: 0;
   width: 160px;
+}
+
+.button-services:hover {
+  padding-left: 35px;
+  color: #FFE17F;
+  background: #000000;
+
 }
 
 .services-list {
@@ -346,7 +453,8 @@ body {
   margin-left: 106px;
 }
 .services-list-button {
-  margin: 65px 243px 65px 0;
+  margin: 65px 0;
+  margin-right: 243px;
   padding:0;
   list-style-type: none;
 }
@@ -364,18 +472,6 @@ body {
 
 .list-button-item {
   margin-bottom: 35px;
-}
-
-.button-services {
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 21px;
-  text-align: center;
-  padding: 10px 4px 10px 4px;
-  text-transform: uppercase;
-  color: #000000;
 }
 
 .services-heading {
@@ -407,6 +503,7 @@ body {
 .delivery {
   background-color: #F0F0F0;
   width: 1160px;
+  height: 100px;
   margin: 0 auto;
   margin-bottom: 70px;
 }
@@ -424,7 +521,7 @@ body {
 }
 
 .delivery-icon {
-  position: absolute;
+  display: block;
   width: 125px;
   height: 100px;
   padding: 35px 39px;
@@ -441,6 +538,23 @@ body {
   height: 20px;
   margin: 40px 0 40px 0;
   text-align: center;
+}
+
+.delivery-info{
+  position: relative;
+  margin:30px 42.5px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgba(220, 220, 220, 0.5);
+
+}
+
+.delivery-info-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 /* Контактная информация */
@@ -500,7 +614,8 @@ body {
 .contact-list {
   margin: 0;
   margin-bottom: 30px;
-  padding: 20px;
+  padding: 0;
+  padding-left: 16px;
 }
 
 .contact-list-item {
@@ -522,6 +637,21 @@ body {
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.button-contact {
+  width: 270px;
+
+}
+.button-contact:hover {
+  background: #FFE17F;
+}
+.button-contact:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
+}
+.button-contact:disabled {
+  opacity: 0.3;
 }
 
 .contact-text {
@@ -588,14 +718,37 @@ body {
   padding-bottom: 56px;
 }
 
+.input-distribution {
+  width: 557px;
+  height: 55px;
+  background-color:transparent;
+  border-color: #C4C4C4;
+  border-width: 0 0 3px 0;
+  padding: 11px 16px 11px 16px;
+}
+
+.input-distribution {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: #444444;
+}
+
 .button-distribution {
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
+  letter-spacing: 0.2em;
+  width: 253px;
+  height: 55px;
+  padding: 18px 39px;
   text-align: center;
   text-transform: uppercase;
+  border: 3px solid #C4C4C4;
 }
 
 .distribution-info {
@@ -604,17 +757,23 @@ body {
   font-size: 18px;
   line-height: 30px;
   display: block;
+  padding: 13px 0;
   color: #444444;
 }
 
 .distribution-icon {
   margin-left: auto;
   margin-right: 16px;
-  margin-top: 7px;
-  margin-bottom: 7px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
 }
 /* catalog.html */
 /* Хлебные крошки*/
+
+.background-navigation {
+ padding-bottom: 40px;
+}
 
 .inner-header{
   width: 1160px;
@@ -670,6 +829,10 @@ body {
 .sorting-container {
   display: flex;
   background-color:#F0F0F0;
+}
+
+.button-catalog {
+  padding:0;
 }
 
 .button-updown {
@@ -829,14 +992,6 @@ body {
   background: #EBEBEB;
 }
 
-.pagination-forward {
-  margin-right: 146px;
-}
-
-.pagination-back {
-  margin-left: 146px;
-}
-
 .pagination-show-more {
   font-family: 'Raleway', sans-serif;
   font-style: normal;
@@ -863,7 +1018,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  padding: 10px 16px 10px 16px;
+  padding: 10px 15px 10px 15px;
   color: #444444;
   text-align: center;
   text-decoration: none;
@@ -880,19 +1035,32 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
+  width: 128px;
+  height: 71px;
+  padding: 25px 25px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  color: #000000;;
+  color: #000000;
 }
 
-.pagination-backforward:last-child {
+.pagination-right {
   margin-right: 146px;
 }
-
-.pagination-backforward:first-of-type {
+.pagination-left {
   margin-left: 146px;
 }
-
+.pagination-backforward:hover {
+  background: #DCDCDC;
+}
+.pagination-backforward:active {
+  background: #DCDCDC;
+  opacity: 0.3;
+}
+.pagination-backforward:focus {
+  background:#F0F0F0;
+  outline: 2px solid #AF4FFF;
+  border:0;
+}
 /* Футер страницы */
 
 .page-footer-container {
@@ -926,8 +1094,22 @@ body {
 
 .logo-footer-link {
   display: block;
+  width: 145px;
   margin-top: 62px;
   margin-bottom: 35px;
+}
+
+.logo-footer-link:hover {
+  opacity: 0.6;
+}
+
+.logo-footer-link:active {
+  opacity: 0.3;
+}
+
+.logo-footer-link:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
 }
 
 .footer-links {
@@ -977,6 +1159,13 @@ body {
   border-radius: 50%;
 }
 
+.footer-social-network-links:hover {
+  background: #FFC700;
+}
+.footer-social-network-links:active {
+  opacity: 0.3;
+}
+
 .footer-social-network-telegram {
   position:absolute;
   top: 50%;
@@ -1004,9 +1193,28 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
+  letter-spacing: 0.2em;
   text-transform: uppercase;
   text-decoration: none;
   color: #FFFFFF;
+}
+
+.footer-services-links:hover {
+  display: block;
+  color: #FFC700;
+  border:  solid #FFC700;
+  border-width: 0 0 3px 0;
+}
+
+.footer-services-links:active {
+  color: #FFC700;
+  border:  solid #FFC700;
+  border-width: 0 0 3px 0;
+  opacity: 0.3;
+}
+.footer-services-links:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
 }
 
 .footer-contacts-address-phone {
@@ -1020,4 +1228,28 @@ body {
   margin-bottom: 63px;
   text-decoration-line: underline;
   color: #FFFFFF;
+}
+
+.footer-contacts-address-phone:hover {
+  color: #FFC700;
+}
+.footer-contacts-address-phone:active {
+  color: #FFC700;
+  opacity: 0.3;
+}
+.footer-contacts-address-phone:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
+}
+
+.logo-html-academy:hover .html-academy-icon{
+  fill: #FFFFFF;
+}
+.logo-html-academy:active .html-academy-icon{
+  fill: #FFFFFF;
+  opacity: 0.2;
+}
+.logo-html-academy:focus{
+  outline: 2px solid #AF4FFF;
+  border:0;
 }
